Ellipsoid graphics weren't handled.
Also made such that if a graphic is not handled it doesn't corrupt the
file.