@@ -4,6 +4,7 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
@@ -1207,7 +1208,7 @@ public class YoGraphicTools
 
    public static YoGraphicListDefinition toYoGraphicListDefinition(Collection<? extends YoGraphicFXItem> yoGraphicFXs)
    {
-      return new YoGraphicListDefinition(yoGraphicFXs.stream().map(YoGraphicTools::toYoGraphicDefinition).collect(Collectors.toList()));
+      return new YoGraphicListDefinition(yoGraphicFXs.stream().map(YoGraphicTools::toYoGraphicDefinition).filter(Objects::nonNull).toList());
    }
 
    public static YoGraphicDefinition toYoGraphicDefinition(YoGraphicFXItem yoGraphicFX)
@@ -1246,8 +1247,11 @@ public class YoGraphicTools
          return toYoGraphicBox3DDefinition((YoBoxFX3D) yoGraphicFX);
       else if (yoGraphicFX instanceof YoSTPBoxFX3D)
          return toYoGraphicSTPBox3DDefinition((YoSTPBoxFX3D) yoGraphicFX);
-      else
-         throw new UnsupportedOperationException("Unsupported " + YoGraphicFX.class.getSimpleName() + ": " + yoGraphicFX.getClass().getSimpleName());
+      else if (yoGraphicFX instanceof YoEllipsoidFX3D)
+         return toYoGraphicEllipsoid3DDefinition((YoEllipsoidFX3D) yoGraphicFX);
+
+      LogTools.error("Unsupported {}: {}", YoGraphicFX.class.getSimpleName(), yoGraphicFX.getClass().getSimpleName());
+      return null;
    }
 
    public static YoGraphicGroupDefinition toYoGraphicGroupDefinition(YoGroupFX yoGraphicFX)
